# ferrilator

./: Cargo.toml  Changelog.md  Dockerfile  Readme.md
cmd/: build
ferrilator/: Cargo.toml  Readme.md
ferrilator/src/: lib.rs
ferrilator_core/: Cargo.toml
ferrilator_core/snapshots/: example.rs
ferrilator_core/src/: err.rs  lib.rs
ferrilator_macros/: Cargo.toml
ferrilator_macros/src/: lib.rs
ferrilator_test/: Cargo.toml  build.rs
ferrilator_test/src/: counter.rs  lib.rs  wide.rs
ferrilator_test/src/hdl/: counter.sv  wide.sv
