[workspace]
resolver = "2"

members = [
  "ferrilator",
  "ferrilator_core",
  "ferrilator_macros"
, "ferrilator_test"]

[workspace.dependencies]
ferrilator = { path = "ferrilator", version = "0.2.0" }
ferrilator_core = { path = "ferrilator_core", version = "0.2.0" }
ferrilator_macros = { path = "ferrilator_macros", version = "0.2.0" }
proc-macro2 = { version = "^1.0.0" }
quote = { version = "^1.0.0" }
syn = { version = "^2.0.0", features = ["full", "extra-traits"] }
prettyplease = { version = "^0.2.0" }
