[package]
name = "ferrilator_core"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "Supporting code for the ferrilator crate, not intended to be consumed directly."
homepage = "https://github.com/toshaf/ferrilator"
repository = "https://github.com/toshaf/ferrilator"

[dependencies]
prettyplease.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
